# Plesk-Auto-Detection-and-Response

./: .env.example  .gitignore  README.md  pyproject.toml  servers.yaml.example
dev/: demo.py
docs/: INSTALL.md  architecture.md  deployment.md
mcp_server/: __init__.py  allowlist.yaml  http_app.py  server.py  tools.py
mcp_server/deploy/: plesk-adr-mcp.service
mcp_server/deploy/sudoers.d/: plesk-adr
mcp_server/exec/: runner.py
orchestrator/: __init__.py  app.py  client.py  config.py  incident.py  remote_client.py  servers.py
orchestrator/agent/: investigator.py
orchestrator/alerts/: ingest.py  models.py
orchestrator/audit/: store.py
orchestrator/chat/: router.py
orchestrator/notify/: base.py  discord.py  teams.py  telegram.py
orchestrator/playbooks/: domain_down.py
orchestrator/response/: executor.py  policy.py  policy.yaml
tests/: conftest.py  test_incident.py  test_ingest_and_app.py  test_playbook.py  test_policy.py  test_remote_and_routing.py  test_runner.py
